<resources>
    <string name="app_name">网评系统</string>

    <string name="account_login">账号登陆</string>
    <string name="login">登陆</string>
    <string name="password">请输入密码</string>
    <string name="username">请输入账号</string>
    <string name="exit">退出</string>

    <string name="article">网评文章</string>
    <string name="task">任务中心</string>
    <string name="site">网上巡查</string>
    <string name="release">热门跟帖</string>
    <string name="setting">设置</string>

    <string name="dialog_confirm">确认</string>
    <string name="dialog_update">立即更新</string>

    <string name="task_tip">任务</string>
    <string name="task_type">任务类型：</string>
    <string name="task_need">任务要求：</string>
    <string name="task_expired">任务期限：</string>
    <string name="task_content">任务内容</string>
    <string name="task_write">写跟帖</string>
    <string name="task_share">分享</string>

    <string name="set_curver">当前版本 </string>
    <string name="set_ver">版本号</string>
    <string name="set_ser">安全中心</string>
    <string name="set_acount_bind">账号绑定</string>
    <string name="set_suc_task">完成任务</string>
    <string name="set_follow">跟帖</string>
    <string name="set_suc_submission">成功投稿</string>

    <!--投稿-->
    <string name="sub_title">投稿</string>
    <string name="sub_his">投稿记录</string>
    <string name="sub_label_title">标题：</string>
    <string name="sub_label_theme">主题：</string>
    <string name="sub_label_level">选择级别：</string>
    <string name="sub_label_return">退回原因：</string>
    <string name="sub_label_file">稿件：</string>
    <string name="sub_label_upfile">选择附件</string>
    <string name="sub_file_list">文件列表</string>
    <string name="sub_valid_title">请输入标题</string>
    <string name="sub_valid_theme">请输入主题</string>
    <string name="sub_valid_level">请选择级别</string>
    <!--通用-->
    <string name="commit">提交</string>
    <!--dialog-->
    <string name="dialog_file_check">选择操作</string>
    <string name="dialog_file_item">文件管理</string>
    <!--发布任务-->
    <string name="task_release">发布任务</string>
    <string name="task_cancel">取消</string>
    <string name="task_create">立即创建</string>
    <!--日期选择器-->
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
</resources>
